[tool.poetry]
name = "python-graphene-patch"
version = "0.1.0"
description = ""
authors = ["Naoya Yamashita <conao3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
graphene-sqlalchemy = "^2.3.0"
Flask-GraphQL = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pre-commit = "^2.17.0"
pytest-icdiff = "^0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
